<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NG USB Terminal</string>
    <string name="app_descr">Terminal for FTDI UART devices connected to USB. For android 3.2 or above with OTG or USB host interface.</string>
    <string name="app_license">License: GPLv3 http://www.gnu.org/copyleft/gpl.html</string>
    <string name="app_descr_uavp">Created for the NG UAVP project. Visit our website: http://ng.uavp.ch</string>
    <string name="app_author">Author: Christian Bergmann christi@dev.uavp.ch</string>
    <string name="app_features">Features:\n - Shell for any FTDI UART devices\n
         - Cursor key or trackball support\n
         - Log to file\n - Read file into terminal\n - Long click on text file opens it into a text editor\n
         - Software flow control. Select ANGCtrl in Connect tab. (Sent bytes minus received bytes may not exceed 127)</string>
    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="connected_to">connected to </string>
    <string name="action_exit">Exit</string>
    <string name="not_connected">not connected</string>
    <string name="title_activity_settings">Settings</string>
    <string name="baudrate">Baudrate</string>
    <string name="databits">Data bits</string>
    <string name="parity">Parity</string>
    <string name="stopbits">Stop bits</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear terminal</string>
    <string name="action_start_log">Log to file</string>
    <string name="action_stop_log">Stop logging to file</string>
    <string name="action_readfile">Read file into terminal</string>
    <string name="action_mkdir">Create directory</string>
    <string name="action_editfile">Edit file</string>
    <string name="action_about">About</string>
    <string name="str_interface">Interface</string>
    <string name="flowcontrol">Flow control</string>
    <string name="error_noAdapter">No serial adapter found !</string>
    <string name="file_extension_txt">.txt</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_file_save_as">Save as</string>
    <string name="hint_filename_unadorned">Filename</string>
    <string name="hint_dirname">Directoryname</string>
    <string name="alert_file_select">Select file</string>
    <string name="alert_supply_filename">Please enter a file name</string>
    <string name="alert_bad_filename_chars">The file name contains bad characters</string>
    <string name="alert_file_exists">The file already exists</string>
    <string name="filename">Filename</string>
    <string name="err_sd_not_readable">SD card is not readable !</string>
    <string name="err_sd_not_writeable">Cannot write to SD card !</string>
    <string name="err_cannot_edit">No app installed that can edit plain text !</string>

</resources>
