<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:stretchMode="columnWidth"
    android:gravity="center"
    android:verticalSpacing="20dp"
    android:horizontalSpacing="20dp"
    tools:context="ng.uavp.ch.ngusbterminal.SettingsFragment"
    android:id="@+id/GridLayout1" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_interface" />
    
    <Spinner
        android:id="@+id/spinnerInterfce"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baudrate" />

    <Spinner
        android:id="@+id/spinnerBaud"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/databits" />

    <Spinner
        android:id="@+id/spinnerBits"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parity" />

    <Spinner
        android:id="@+id/spinnerParity"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopbits" />

    <Spinner
        android:id="@+id/spinnerStopbits"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flowcontrol" />

    <Spinner
        android:id="@+id/spinnerFlow"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:text="@string/connect" />
    
</GridLayout>